# kodezart

./: .dockerignore  .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: check.yml
docs/: api.md  architecture.md  configuration.md
src/kodezart/: __init__.py  main.py
src/kodezart/adapters/: __init__.py  _permission_modes.py  _sdk_mapping.py  claude_agent_executor.py  claude_client_executor.py  git_artifact_persister.py  git_branch_merger.py  git_change_persister.py  git_worktree_provider.py  github_api.py  github_token_auth.py  local_bare_repo_cache.py  subprocess_git_service.py
src/kodezart/agents/: __init__.py
src/kodezart/api/: __init__.py
src/kodezart/chains/: __init__.py  ralph_loop.py  ralph_workflow.py  ticket_generation.py
src/kodezart/core/: __init__.py  checkpointer.py  config.py  constants.py  logging.py  protocols.py  retry.py
src/kodezart/domain/: __init__.py  agent.py  errors.py  git_url.py  health.py  ticket.py
src/kodezart/handlers/: __init__.py  agent_handler.py  health_handler.py
src/kodezart/prompts/: acceptance_criteria.py  branch_name.py  commit_message.py  evaluation.py  iteration_feedback.py  (+2 more)
tests/: __init__.py  conftest.py  fakes.py
tests/adapters/: test_claude_executors.py  test_git_artifact_persister.py  test_git_branch_merger.py  test_git_change_persister.py  test_git_worktree_provider.py  test_github_api.py  test_subprocess_git.py
tests/chains/: test_ralph_loop.py  test_ralph_workflow.py  test_shorthand_url_resolution.py  test_ticket_generation.py
tests/core/: test_retry.py
tests/domain/: test_agent.py  test_branch.py  test_git_url.py
tests/integration/: test_session_resume.py  test_workflow_e2e.py
tests/prompts/: test_prompt_wiring.py
tests/services/: test_agent_service.py
(+26 files in other folders)
