[project]
name = "kodezart"
version = "0.1.0"
description = "kodezart — music-inspired AI assistant"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pydantic-ai>=0.0.14",
    "claude-agent-sdk>=0.1.58",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.9.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "langgraph-checkpoint-postgres>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
mypy_path = "src"
strict = true
disallow_any_explicit = true

[[tool.mypy.overrides]]
module = ["kodezart.core.config"]
disallow_any_explicit = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E","W","F","I","B","C4","UP","N","ANN","S","A","ARG","RUF"]
ignore = [
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py"                       = ["S101", "ARG001", "ARG002", "ANN", "S108"]
"src/kodezart/core/config.py"        = ["S108"]

[tool.ruff.lint.isort]
known-first-party = ["kodezart"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["live: requires live Claude CLI (skip by default, run with: pytest -m live)"]
